--- a/Razor Final Project Code Academy/Views/Shop/DetailAccessory.cshtml
+++ b/Razor Final Project Code Academy/Views/Shop/DetailAccessory.cshtml
@@ -189,11 +189,23 @@
                                 </div>
 
                                 <div class="addToCard">
-                                    <div class="add">
-                                        <button type="submit" class="addToCard">
-                                            ADD TO CARD
-                                        </button>
-                                    </div>
+
+
+                                    @if (Model.InStock == true)
+                                    {
+                                        <div class="add">
+                                            <button type="submit" class="addToCard">
+                                                ADD TO CARD
+                                            </button>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="alert alert-success" role="alert">
+                                           Not in Srock!
+                                        </div>
+                                    }
+
                                     <div class="wishlist">
 
                                         <div class="icon">
@@ -208,7 +220,7 @@
                                         <div class="panelWish">
                                             @if (User.Identity.IsAuthenticated)
                                             {
-                                                if (wishlist.Any(x=>x.IsAccessory==true))
+                                                if (wishlist.Any(x => x.IsAccessory == true))
                                                 {
                                                     bool isItemInWishlist = wishlist.Any(items => items.AccessoryId == Model.Id);
 
