--- a/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Shared/_Layout.cshtml
+++ b/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                             <span style="color:white;" class="nav-profile-name">Louis Barnett</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                            <a class="dropdown-item">
+                            <a asp-controller="AdminLogin" asp-action="LogOut" class="dropdown-item">
                                 <i style="color:white;" class="mdi mdi-logout text-primary"></i>
                                 Logout
                             </a>
