--- a/Razor Final Project Code Academy/Views/Shop/DetailPhone.cshtml
+++ b/Razor Final Project Code Academy/Views/Shop/DetailPhone.cshtml
@@ -4,7 +4,7 @@
     List<Accessory> accessories =ViewBag.Accessory;
     List<Product> products = ViewBag.Product;
     List<Wishlist> wishlist = ViewBag.WishList;
-
+    var productRamMemroy = Model.ProductRamMemories.Sum(q => q.Quantity);
 }
 
    
@@ -199,7 +199,8 @@
                                 </div>
 
                                 <div class="addToCard">
-                                    @if (Model.InStock == true)
+
+                                    @if (productRamMemroy != 0)
                                     {
                                         <div class="add">
                                             <button type="submit" class="addToCard">
@@ -209,10 +210,12 @@
                                     }
                                     else
                                     {
-                                        <div class="alert alert-success" role="alert">
-                                            Not in Srock!
+                                        <div class="alert alert-dark" role="alert">
+                                            Not In Stock!
                                         </div>
                                     }
+
+
                                     <div class="wishlist">
 
                                         <div class="icon">
