--- a/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Shared/_Layout.cshtml
+++ b/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Shared/_Layout.cshtml
@@ -62,7 +62,14 @@
                                 <i style="color:white;" class="mdi mdi-logout text-primary"></i>
                                 Logout
                             </a>
-                        </div>
+                            @if (User.IsInRole(Roles.SuperAdmin.ToString()))
+                                {
+                                <a asp-controller="AdminRegister" asp-action="Register" class="dropdown-item">
+                                    <i style="color:white;" class="mdi mdi-logout text-primary"></i>
+                                    Register For New Admins
+                                </a>
+                                }
+                            </div>
                     </li>
                 </ul>
                 <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
