--- a/Razor Final Project Code Academy/Views/Order/Index.cshtml
+++ b/Razor Final Project Code Academy/Views/Order/Index.cshtml
@@ -36,49 +36,49 @@
                                         <div class="row">
                                             <div class="input fullname col-lg-6">
                                                 <label asp-for="FullName">Full Name:</label><br>
-                                                <input asp-for="FullName" placeholder="FullName" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="FullName" placeholder="FullName" required><br>
                                                 <span asp-validation-for="FullName" class="text-danger"></span>
                                             </div>
                                             <div class="input email col-lg-6">
                                                 <label asp-for="Email">Email:</label><br>
-                                                <input asp-for="Email" placeholder="Email" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Email" placeholder="Email" required><br>
                                                 <span asp-validation-for="Email" class="text-danger"></span>
                                             </div>
 
                                             <div class="input adress col-lg-6">
                                                 <label asp-for="Contry">Contry:</label><br>
-                                                <input asp-for="Contry" placeholder="Adress" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Contry" placeholder="Adress" required><br>
                                                 <span asp-validation-for="Contry" class="text-danger"></span>
                                             </div>
 
                                             <div class="input adress col-lg-6">
                                                 <label asp-for="City">City:</label><br>
-                                                <input asp-for="City" placeholder="Adress" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="City" placeholder="Adress" required><br>
                                                 <span asp-validation-for="City" class="text-danger"></span>
                                             </div>
 
                                             <div class="input adress col-lg-6">
                                                 <label asp-for="Address">Adress:</label><br>
-                                                <input asp-for="Address" placeholder="Adress" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Address" placeholder="Adress" required><br>
                                                 <span asp-validation-for="Address" class="text-danger"></span>
                                             </div>
 
                                             <div class="input adress col-lg-6">
                                                 <label asp-for="Zip">Zip Code:</label><br>
-                                                <input asp-for="Zip" placeholder="Adress" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Zip" placeholder="Adress" required><br>
                                                 <span asp-validation-for="Zip" class="text-danger"></span>
                                             </div>
 
                                             <div class="input adress col-lg-6">
                                                 <label asp-for="Number">Phone Number:</label><br>
-                                                <input asp-for="Number" placeholder="Adress" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Number" placeholder="Adress" required><br>
                                                 <span asp-validation-for="Number" class="text-danger"></span>
                                             </div>
 
 
                                             <div class="input note col-lg-6">
                                                 <label asp-for="Note">Note:</label><br>
-                                                <input asp-for="Note" placeholder="Note" required>
+                                                <input style="padding:5px; border-radius:15px;" asp-for="Note" placeholder="Note" required>
                                                 <span asp-validation-for="Note" class="text-danger"></span>
                                             </div>
                                         </div>
