--- a/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Shared/_Layout.cshtml
+++ b/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     <!-- endinject -->
     <link rel="shortcut icon" href="images/favicon.png" />
     @RenderSection("Css", false)
+
 </head>
 <body>
     <div class="container-scroller">
@@ -52,10 +53,25 @@
                 </div>
             </div>
             <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end" style=" background-color: #232f3f !important;">
+
+                <form method="post" action="#" class="searchFormMain" style="padding-top: 14px;">
+                    <input style="padding: 5px; width: 510px;" class="searchInputMain" type="search" placeholder="Search in Admin Panel">
+                    <ul style="display: none; border: 1px solid #828282; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px; position: absolute; top: 123px; left: 361px; width: 490px; padding: 15px; z-index: 5000; background-color: white;" class="searchUlMain">
+                    </ul>
+                </form>
+
                 <ul class="navbar-nav navbar-nav-right">
-                    <li class="nav-item nav-profile dropdown" >
+                    <li class="nav-item nav-profile dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="profileDropdown">
-                            <span style="color:white;" class="nav-profile-name">Louis Barnett</span>
+                            <span style="color:white;" class="nav-profile-name">
+                                LogOut
+                            </span>
+                            @if (User.IsInRole(Roles.SuperAdmin.ToString()))
+                            {
+                                <span style="color:white;" class="nav-profile-name">
+                                    / Register
+                                </span>
+                            }
                         </a>
                         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
                             <a asp-controller="AdminLogin" asp-action="LogOut" class="dropdown-item">
@@ -63,13 +79,13 @@
                                 Logout
                             </a>
                             @if (User.IsInRole(Roles.SuperAdmin.ToString()))
-                                {
+                            {
                                 <a asp-controller="AdminRegister" asp-action="Register" class="dropdown-item">
                                     <i style="color:white;" class="mdi mdi-logout text-primary"></i>
                                     Register For New Admins
                                 </a>
-                                }
-                            </div>
+                            }
+                        </div>
                     </li>
                 </ul>
                 <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
@@ -155,6 +171,56 @@
     @RenderSection("Scripts", false)
     @RenderSection("Script", false)
     <script src="~/admin/assets/js/jquery.cookie.js" type="text/javascript"></script>
-</body>
+    <script>
+        const form = document.querySelector('.searchFormMain');
+        const input = form.querySelector('.searchInputMain');
+        const results = form.querySelector('.searchUlMain');
 
+        form.addEventListener('submit', handleSubmit);
+        input.addEventListener('input', handleInput);
+
+        let timeoutId;
+
+        function handleSubmit(e) {
+            e.preventDefault();
+            const searchQuery = input.value.trim();
+
+            if (searchQuery.length < 2) {
+                results.innerHTML = '';
+                results.style.display = 'none';
+                return;
+            }
+
+            fetchSearchResults(searchQuery);
+        }
+
+        function handleInput() {
+            const searchQuery = input.value.trim();
+
+            if (searchQuery.length < 2) {
+                results.innerHTML = '';
+                results.style.display = 'none';
+                return;
+            }
+
+            clearTimeout(timeoutId);
+            timeoutId = setTimeout(() => {
+                fetchSearchResults(searchQuery);
+            }, 500);
+        }
+
+        async function fetchSearchResults(searchQuery) {
+            try {
+                const response = await fetch(`/Diagram/Search?search=${searchQuery}`);
+                const data = await response.text();
+                results.innerHTML = data;
+                results.style.display = 'block';
+            } catch (error) {
+                console.log(error);
+            }
+        }
+
+    </script>
+</body>
 </html>
+
