--- a/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Accessory/Index.cshtml
+++ b/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Accessory/Index.cshtml
@@ -109,7 +109,7 @@
                 </td>
                 <td>
                     <a style=" text-decoration: none; color: red;" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a style=" text-decoration: none; color: orange;" asp-action="Detail" asp-route-id="@item.Id">Details</a> |
+                    <a style=" text-decoration: none; color: orange;" asp-action="Detail" asp-route-id="@item.Id">Detail</a> |
                     <a style=" text-decoration: none; color: red;" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
