--- a/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Shared/_Layout.cshtml
+++ b/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Shared/_Layout.cshtml
@@ -45,8 +45,8 @@
         <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="navbar-brand-wrapper d-flex justify-content-center" style="background-color: #232f3f !important; ">
                 <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100" style="background-color: #232f3f !important; ">
-                    <a class="navbar-brand brand-logo" href="index.html"><img style=" object-fit:contain;" src="~/assets/images/HeaderLogo/logo-2_1553586230__63532.original.png" alt="logo" /></a>
-                    <a class="navbar-brand brand-logo-mini" href="index.html"><img style=" object-fit:contain;" src="~/assets/images/HeaderLogo/logo-2_1553586230__63532.original.png" /></a>
+                    <a class="navbar-brand brand-logo" asp-controller="Diagram" asp-action="Index" asp-area="RazorAdmin"><img style=" object-fit:contain;" src="~/assets/images/HeaderLogo/logo-2_1553586230__63532.original.png" alt="logo" /></a>
+                    <a class="navbar-brand brand-logo-mini" asp-controller="Diagram" asp-action="Index" asp-area="RazorAdmin"><img style=" object-fit:contain;" src="~/assets/images/HeaderLogo/logo-2_1553586230__63532.original.png" /></a>
                     <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
                         <span style="color:white;" class="mdi mdi-sort-variant"></span>
                     </button>
