--- a/Razor Final Project Code Academy/Views/Basket/BasketCart.cshtml
+++ b/Razor Final Project Code Academy/Views/Basket/BasketCart.cshtml
@@ -67,7 +67,7 @@
                                         <div class="quantity">
                                         
                                             <div class="input">
-                                                <input class="quantityInput" type="number" value="@item.SaleQuantity">
+                                                <input class="quantityInput" type="number" readonly value="@item.SaleQuantity">
                                             </div>
                          
                                         </div>
