--- a/Razor Final Project Code Academy/Views/Order/Index.cshtml
+++ b/Razor Final Project Code Academy/Views/Order/Index.cshtml
@@ -47,13 +47,13 @@
 
                                             <div class="input adress col-lg-6">
                                                 <label asp-for="Contry">Contry:</label><br>
-                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Contry" placeholder="Adress" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Contry" placeholder="Contry" required><br>
                                                 <span asp-validation-for="Contry" class="text-danger"></span>
                                             </div>
 
                                             <div class="input adress col-lg-6">
                                                 <label asp-for="City">City:</label><br>
-                                                <input style="padding: 5px; border-radius: 15px;" asp-for="City" placeholder="Adress" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="City" placeholder="City" required><br>
                                                 <span asp-validation-for="City" class="text-danger"></span>
                                             </div>
 
@@ -65,13 +65,13 @@
 
                                             <div class="input adress col-lg-6">
                                                 <label asp-for="Zip">Zip Code:</label><br>
-                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Zip" placeholder="Adress" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Zip" placeholder="Zip Code" required><br>
                                                 <span asp-validation-for="Zip" class="text-danger"></span>
                                             </div>
 
                                             <div class="input adress col-lg-6">
                                                 <label asp-for="Number">Phone Number:</label><br>
-                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Number" placeholder="Adress" required><br>
+                                                <input style="padding: 5px; border-radius: 15px;" asp-for="Number" placeholder="Phone Number" required><br>
                                                 <span asp-validation-for="Number" class="text-danger"></span>
                                             </div>
 
