--- a/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Shared/_Layout.cshtml
+++ b/Razor Final Project Code Academy/Areas/RazorAdmin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@inject Razor_Final_Project_Code_Academy.Service.LayoutService layout
+@{
+
+    List<Order> orders = layout.GetOrders();
+}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,7 +23,6 @@
     <!-- endinject -->
     <link rel="shortcut icon" href="images/favicon.png" />
     @RenderSection("Css", false)
-
 </head>
 <body>
     <div class="container-scroller">
@@ -53,7 +56,34 @@
                 </div>
             </div>
             <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end" style=" background-color: #232f3f !important;">
+             
                 <ul class="navbar-nav navbar-nav-right">
+                    <li class="nav-item dropdown me-1">
+                        <a class="nav-link count-indicator dropdown-toggle d-flex justify-content-center align-items-center" id="messageDropdown" href="#" data-bs-toggle="dropdown">
+                            <i class="mdi mdi-message-text mx-0"></i>
+                            @if (orders.Any(x => x.Status == Utilities.Status.Pending))
+                            {
+                                <span class="count"></span>
+                            }
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="messageDropdown">
+                            <p class="mb-0 font-weight-normal float-left dropdown-header">Messages</p>
+                            @foreach (var item in orders.Where(x=>x.Status == Utilities.Status.Pending))
+                            {
+                                <a class="dropdown-item">
+ 
+                                    <div class="item-content flex-grow">
+                                        <h6 class="ellipsis font-weight-normal">
+                                            @item.FullName
+                                        </h6>
+                                        <p class="font-weight-light small-text text-muted mb-0">
+                                            @item.TotalPrice
+                                        </p>
+                                    </div>
+                                </a>
+                            }
+                        </div>
+                    </li>
                     <li class="nav-item nav-profile dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="profileDropdown">
                             <span style="color:white;" class="nav-profile-name">
@@ -81,11 +111,11 @@
                         </div>
                     </li>
                 </ul>
-                <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-                    <span class="mdi mdi-menu"></span>
-                </button>
-            </div>
-        </nav>
+                            <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+                                <span class="mdi mdi-menu"></span>
+                            </button>
+                        </div>
+</nav>
         <!-- partial -->
         <div class="container-fluid page-body-wrapper">
             <!-- partial:partials/_sidebar.html -->
