--- a/Razor Final Project Code Academy/Views/Order/AccountOrders.cshtml
+++ b/Razor Final Project Code Academy/Views/Order/AccountOrders.cshtml
@@ -15,8 +15,11 @@
             <ul>
                 <li class="current">ORDERS</li>
                 <li class="colorChange"><a asp-controller="Wishlist" asp-action="Index">WISH LISTS</a></li>
-                <li class="colorChange"><a asp-controller="Account" asp-action="AccountDetails">ACCOUNT SETTINGS</a></li>
-            </ul>
+                @if (User.Identity.IsAuthenticated)
+                    {
+                    <li class="colorChange"><a asp-controller="Account" asp-action="AccountDetails">ACCOUNT SETTINGS</a></li>
+                    }
+                </ul>
 
             <div class="content" style="padding-left: 0; padding-top: 20px;">
 
