--- a/Razor Final Project Code Academy/Views/Shared/_Layout.cshtml
+++ b/Razor Final Project Code Academy/Views/Shared/_Layout.cshtml
@@ -486,9 +486,12 @@
                                 <ul>
                                     <li><a asp-controller="Page" asp-action="Index">Pages</a></li>
                                     <li><a asp-controller="Contact" asp-action="Index">Contact Us</a></li>
-                                    <li><a asp-controller="Account" asp-action="AccountDetails">Account Settings</a></li>
-                                    <li><a asp-controller="Shop" asp-action="Index">Shop</a></li>
-                                </ul>
+                                    @if (User.Identity.IsAuthenticated)
+                                        {
+                                        <li><a asp-controller="Account" asp-action="AccountDetails">Account Settings</a></li>
+                                        }
+                                        <li><a asp-controller="Shop" asp-action="Index">Shop</a></li>
+                                    </ul>
                             </div>
                         </div>
                     </div>
@@ -549,7 +552,11 @@
                                         <ul>
                                             <li><a asp-controller="Page" asp-action="Index">Pages</a></li>
                                             <li><a asp-controller="Contact" asp-action="Index">Contact Us</a></li>
-                                            <li><a asp-controller="Account" asp-action="AccountDetails">Account Settings</a></li>
+                                            @if (User.Identity.IsAuthenticated)
+                                            {
+                                                <li><a asp-controller="Account" asp-action="AccountDetails">Account Settings</a></li>
+
+                                            }
                                             <li><a asp-controller="Shop" asp-action="Index">Shop</a></li>
                                         </ul>
                                     </div>
