Sonuncu Commit Final Layihesinin Sonu

--- a/Razor Final Project Code Academy/Views/Shared/_Layout.cshtml
+++ b/Razor Final Project Code Academy/Views/Shared/_Layout.cshtml
@@ -345,7 +345,7 @@
                         <div class="inputDiv">
                             <form method="post" action="#" class="searchItem">
                                 <input style="padding:5px;" class="searchInput" type="search" placeholder="Search the store">
-                                <ul class="searchUl">
+                                <ul class="searchUl" style="display: none;">
                                 </ul>
                             </form>
 
