--- a/Razor Final Project Code Academy/wwwroot/assets/css/main.css
+++ b/Razor Final Project Code Academy/wwwroot/assets/css/main.css
@@ -3464,7 +3464,7 @@ footer .bottomLine .paymant ul li i {
   height: 20px;
   position: absolute;
   right: 45px;
-  bottom: 34px;
+  bottom: 60px;
 }
 #cart table tbody tr td .iconDelete a {
   text-decoration: none;
@@ -9588,6 +9588,29 @@ input[type=number]::-webkit-inner-spin-button {
   display: inline-block;
   text-decoration: none;
   color: white;
+  background-color: #ff7e00;
+}
+#shop .up {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 85px;
+  bottom: 25px;
+  position: fixed;
+  padding-top: 12px;
+  width: 45px;
+  height: 45px;
+  padding: 0;
+  margin: 0;
+  border-radius: 3px;
+  cursor: pointer;
+  background: #999;
+  color: #fff;
+  text-align: center;
+  transition: 0.4s;
+  z-index: 300;
+}
+#shop .up:hover {
   background-color: #ff7e00;
 }
 
