--- a/Razor Final Project Code Academy/Views/Basket/BasketCart.cshtml
+++ b/Razor Final Project Code Academy/Views/Basket/BasketCart.cshtml
@@ -116,18 +116,8 @@
                                     </td>
                                     <td>
                                         <div class="quantity">
-                                            <div class="iconLeft">
-                                                <button type="button" onclick="handleDEcreaseQuantity()">
-                                                    <i class="fa-solid fa-chevron-down"></i>
-                                                </button>
-                                            </div>
                                             <div class="input">
-                                                <input class="quantityInput" type="number" value="@item.SaleQuantity">
-                                            </div>
-                                            <div class="iconRight">
-                                                <button type="button" onclick="handleIncreaseQuantity()">
-                                                    <i class="fa-solid fa-chevron-up"></i>
-                                                </button>
+                                                <input class="quantityInput" readonly type="number" value="@item.SaleQuantity">
                                             </div>
                                         </div>
                                     </td>
@@ -191,7 +181,7 @@
                                     Quantity:
                                 </span>
                                 <div class="input">
-                                    <input class="quantityInputSM" type="number" value="@item.SaleQuantity">
+                                    <input class="quantityInputSM" readonly type="number" value="@item.SaleQuantity">
                                 </div>
                             </div>
                             <div class="total">
@@ -240,7 +230,7 @@
                                     Quantity:
                                 </span>
                                 <div class="input">
-                                    <input class="quantityInputSM" type="number" value="@item.SaleQuantity">
+                                    <input class="quantityInputSM" readonly type="number" value="@item.SaleQuantity">
                                 </div>
                             </div>
                             <div class="total">
