--- a/Razor Final Project Code Academy/Views/Shop/Index.cshtml
+++ b/Razor Final Project Code Academy/Views/Shop/Index.cshtml
@@ -140,7 +140,7 @@
                                             {
                                                 <img style="width: 150px; height: 150px; object-fit: contain;" src="~/assets/images/Product/@accessory.AccessoryImages.First().Image" alt="">
                                             }
-       
+
                                         </a>
                                     }
                                 </div>
@@ -162,6 +162,11 @@
 
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="up">
+                <i class="fa-solid fa-chevron-up"></i>
             </div>
         </div>
     </div>
